--- a/writing.html
+++ b/writing.html
@@ -29,16 +29,16 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">PORTFOLIO
-                <span class="sr-only">(current)</span>
-              </a>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">PORTFOLIO</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="assets\SD-Resume.pdf">RESUME</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="writing.html">WRITING</a>
+            <li class="nav-item active">
+              <a class="nav-link" href="#">WRITING
+			    <span class="sr-only">(current)</span>
+			  </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">CONTACT</a>
@@ -61,10 +61,10 @@
             <img class="img-fluid rounded mb-3 mb-md-0" src="assets\kiva_logo.png" alt="">
         </div>
         <div class="col-md-5">
-		  <a href="kiva_analysis.html">
-            <h3>Kiva Analysis</h3>
+		  <a href="http://iveybusinessreview.ca/cms/5335/diving-deep-healthcare-data-2/">
+            <h3>Diving Deep Into Healthcare Data</h3>
 		  </a>
-          <p>An analysis of Kiva loan data to identify impact and weaknesses of organization. Data visualization with python</p>
+          <p>GE Healthcare can help hospitals better diagnose patients and reduce readmissions by acquiring the deep learning analytics company Enliti</p>
         </div>
       </div>
       <!-- /.row -->
@@ -74,13 +74,13 @@
       <!-- Project Two -->
       <div class="row">
         <div class="col-md-7">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="assets\McD_logo.png" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="assets\printingbad.png" alt="">
         </div>
         <div class="col-md-5">
-		  <a href="https://medium.com/@sanveerdhanju/nutrition-economics-at-mcdonalds-763ed58f356f">
-            <h3>McDonalds Nutritional Economics</h3>
+		  <a href="https://medium.com/@sanveerdhanju/rise-of-3d-printed-drugs-8fc5c21c36ae">
+            <h3>Rise of 3D Printed Drugs</h3>
 		  </a>
-          <p>Are all burgers created equal?</p>
+          <p>How 3D printers could disrupt pharmaceuticals</p>
         </div>
       </div>
       <!-- /.row -->
@@ -89,22 +89,7 @@
       <hr>
 
 	  
-      <!-- Project Three -->
-      <div class="row">
-        <div class="col-md-7">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="assets\CNN.png" alt="">
-        </div>
-        <div class="col-md-5">
-		  <a href="#">
-            <h3>High resolution automatic hippocampal tissue segmentation </h3>
-		  </a>
-          <p>Classified patient data</p>
-        </div>
-      </div>
-      <!-- /.row -->
 
-
-      <hr>
 
 
     </div>
