Structural Updates to Site

--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta name="Sanveer Dhanju" content="Writing">
+    <meta name="Sanveer Dhanju" content="Projects">
 
     <title>SD - Portfolio</title>
 
@@ -29,13 +29,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="projects.html">PROJECTS</a>
-            </li>
             <li class="nav-item active">
-              <a class="nav-link" href="#">WRITING
-			    <span class="sr-only">(current)</span>
-			  </a>
+              <a class="nav-link" href="projects.html">PROJECTS
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="writing.html">WRITING</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="assets\SD-Resume.pdf">RESUME</a>
@@ -52,19 +52,19 @@
     <div class="container">
 
       <!-- Page Heading -->
-      <h1 class="my-4">Writing Pieces
+      <h1 class="my-4">Projects
       </h1>
 
       <!-- Project One -->
       <div class="row">
         <div class="col-md-7">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="assets\IBR_cover.jpg" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="assets\kiva_logo.png" alt="">
         </div>
         <div class="col-md-5">
-		  <a href="http://iveybusinessreview.ca/cms/5335/diving-deep-healthcare-data-2/">
-            <h3>Diving Deep Into Healthcare Data</h3>
+		  <a href="kiva_analysis.html">
+            <h3>Kiva Analysis</h3>
 		  </a>
-          <p>GE Healthcare can help hospitals better diagnose patients and reduce readmissions by acquiring the deep learning analytics company Enliti</p>
+          <p>An analysis of Kiva loan data to identify impact and weaknesses of organization. Data visualization with python</p>
         </div>
       </div>
       <!-- /.row -->
@@ -74,13 +74,13 @@
       <!-- Project Two -->
       <div class="row">
         <div class="col-md-7">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="assets\printingbad.png" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="assets\McD_logo.png" alt="">
         </div>
         <div class="col-md-5">
-		  <a href="https://medium.com/@sanveerdhanju/rise-of-3d-printed-drugs-8fc5c21c36ae">
-            <h3>Rise of 3D Printed Drugs</h3>
+		  <a href="https://medium.com/@sanveerdhanju/nutrition-economics-at-mcdonalds-763ed58f356f">
+            <h3>McDonalds Nutritional Economics</h3>
 		  </a>
-          <p>How 3D printers could disrupt pharmaceuticals</p>
+          <p>Are all burgers created equal?</p>
         </div>
       </div>
       <!-- /.row -->
@@ -89,9 +89,40 @@
       <hr>
 
 	  
+      <!-- Project Three -->
+      <div class="row">
+        <div class="col-md-7">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="assets\CNN.png" alt="">
+        </div>
+        <div class="col-md-5">
+		  <a href="#">
+            <h3>High resolution automatic hippocampal tissue segmentation </h3>
+		  </a>
+          <p>Classified patient data</p>
+        </div>
+      </div>
+      <!-- /.row -->
 
 
+      <hr>
 
+      <!-- Project Four -->
+      <div class="row">
+        <div class="col-md-7">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="assets\2048_logo.png" alt="">
+        </div>
+        <div class="col-md-5">
+		  <a href="#">
+            <h3>2048 Game built with VBA </h3>
+		  </a>
+          <p>Combine tiles to sum up to 2048. Includes auto-solve algorithm, leaderboard, and multiple difficulty settings</p>
+        </div>
+      </div>
+      <!-- /.row -->
+
+
+      <hr>
+        
     </div>
     <!-- /.container -->
 
