--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,7 @@
       <!-- Project Two -->
       <div class="row">
         <div class="col-md-7">
-            <img class="img-fluid rounded mb-3 mb-md-0" src="assets\McD_logo.png" alt="">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="assets\Mcd_logo.png" alt="">
         </div>
         <div class="col-md-5">
 		  <a href="https://medium.com/@sanveerdhanju/nutrition-economics-at-mcdonalds-763ed58f356f">
