--- a/writing.html
+++ b/writing.html
@@ -10,11 +10,9 @@
 
     <title>SD - Portfolio</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="css/1-col-portfolio.css" rel="stylesheet">
+    <!-- Custom Style Sheets -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
 
   </head>
 
@@ -64,7 +62,7 @@
 		  <a href="http://iveybusinessreview.ca/cms/5335/diving-deep-healthcare-data-2/">
             <h3>Diving Deep Into Healthcare Data</h3>
 		  </a>
-          <p>GE Healthcare can help hospitals better diagnose patients and reduce readmissions by acquiring the deep learning analytics company Enliti</p>
+          <p>A proposal for GE Healthcare to acquire deep learning analytics company Enlitic to help hospitals better diagnose patients and reduce readmissions.</p>
         </div>
       </div>
       <!-- /.row -->
@@ -80,7 +78,7 @@
 		  <a href="https://medium.com/@sanveerdhanju/rise-of-3d-printed-drugs-8fc5c21c36ae">
             <h3>Rise of 3D Printed Drugs</h3>
 		  </a>
-          <p>How 3D printers could disrupt pharmaceuticals</p>
+          <p>How 3D printers could disrupt the big pharma business model.</p>
         </div>
       </div>
       <!-- /.row -->
@@ -88,8 +86,22 @@
 
       <hr>
 
-	  
+        <!-- Project Three -->
+      <div class="row">
+        <div class="col-md-7">
+            <img class="img-fluid rounded mb-3 mb-md-0" src="assets\BMJ_logo.png" alt="">
+        </div>
+        <div class="col-md-5">
+		  <a href="https://www.ncbi.nlm.nih.gov/pubmed/26985048">
+            <h3>Unusual Tremor Syndromes</h3>
+		  </a>
+          <p>Co-author on paper that provides broad clinical information to aid in the recognition and treatment of unudual tremor syndromes.</p>
+        </div>
+      </div>
+      <!-- /.row -->
 
+
+      <hr>
 
 
     </div>
@@ -103,10 +115,7 @@
       <!-- /.container -->
     </footer>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+    
   </body>
 
 </html>
