--- a/projects.html
+++ b/projects.html
@@ -10,11 +10,9 @@
 
     <title>SD - Portfolio</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="css/1-col-portfolio.css" rel="stylesheet">
+    <!-- Custom Style Sheets -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/custom.css" rel="stylesheet">
 
   </head>
 
@@ -54,7 +52,8 @@
       <!-- Page Heading -->
       <h1 class="my-4">Projects
       </h1>
-
+        
+        <p1>A collection of personal projects <br><br/></p1>
       <!-- Project One -->
       <div class="row">
         <div class="col-md-7">
@@ -64,7 +63,8 @@
 		  <a href="kiva_analysis.html">
             <h3>Kiva Analysis</h3>
 		  </a>
-          <p>An analysis of Kiva loan data to identify impact and weaknesses of organization. Data visualization with python</p>
+            <p class="textarea">Python</p>
+          <p>An analysis of Kiva loan data to identify behaviour trends and potential impact. Data visualization with python</p>
         </div>
       </div>
       <!-- /.row -->
@@ -80,7 +80,8 @@
 		  <a href="https://medium.com/@sanveerdhanju/nutrition-economics-at-mcdonalds-763ed58f356f">
             <h3>McDonalds Nutritional Economics</h3>
 		  </a>
-          <p>Are all burgers created equal?</p>
+            <p>Tableau</p>
+          <p>An analytical comparison of nutritional content in popular McDonalds food to assess which items offer the best nutritional value per dollar.</p>
         </div>
       </div>
       <!-- /.row -->
@@ -95,10 +96,11 @@
             <img class="img-fluid rounded mb-3 mb-md-0" src="assets\CNN.png" alt="">
         </div>
         <div class="col-md-5">
-		  <a href="#">
+		  <a href="cnn.html">
             <h3>High resolution automatic hippocampal tissue segmentation </h3>
 		  </a>
-          <p>Classified patient data</p>
+            <p>Python and Matlab</p>
+          <p>2018 Medical Biophysics Undergraduate Thesis — Implemented a convolutional neural network (CNN) to automatically segment hippocampal subfields using a protocol demarcating an unprecedented amount of detail.</p>
         </div>
       </div>
       <!-- /.row -->
@@ -112,10 +114,11 @@
             <img class="img-fluid rounded mb-3 mb-md-0" src="assets\2048_logo.png" alt="">
         </div>
         <div class="col-md-5">
-		  <a href="#">
+		  <a href="2048.html">
             <h3>2048 Game built with VBA </h3>
 		  </a>
-          <p>Combine tiles to sum up to 2048. Includes auto-solve algorithm, leaderboard, and multiple difficulty settings</p>
+            <p>VBA</p>
+          <p>Recreated the popular '2048' game in VBA. Additional features include hints, autosolve, tile blocks and more!</p>
         </div>
       </div>
       <!-- /.row -->
@@ -134,9 +137,6 @@
       <!-- /.container -->
     </footer>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   </body>
 
