--- a/2048.html
+++ b/2048.html
@@ -63,25 +63,46 @@
 
                     <!-- Content -->
                     <hr>
+                    <h5>Game board</h5>
+                    <a href="assets/2048/2048%20Game.xlsm" target="_blank">Download Excel Project</a>
+                    <br><br>
                     <p>2048 is a highly addictive game popularized with the mobile game. My group recreated this game in Excel using VBA with our own twist.</p>
+                    <br>
                     <img class="img-fluid rounded mb-3 mb-md-0" src="assets/2048/game_baord.png" alt="" style="width:100%">
-                    <p>Objective of game</p>
+                    <div>
+                        <br><br>
+                        <h5>Objective of game</h5>
+                        <p>2048 is played by sliding tiles in a cardinal direction; if tiles of the same number collide, they merge to form the sum of tiles. A new tile is generated randomly after each move. The goal is to reach a tile with the value of 2048 before the board fills up with tiles. </p> 
+                        <br><br>
+                    </div>
                     <div class="row">
                         <div class="col-md-7">
                             <img class="img-fluid rounded mb-3 mb-md-0" src="assets/2048/difficulty_select.png" alt="" style="width:100%">
                         </div>
-                        <div class="col-md-5"><p>Hi</p>
+                        <div class="col-md-5"><br><h5>Game settings</h5>
+                            <p>A GUI has been implemented where users can choose from four preset difficulty options, or to choose their own rules. Each mode has a set number of special features that can be used</p>
                         </div>
                     </div>
-<p>auto solve stuff</p>
-                       <div class="row">
-                        <div class="col-md-4"><p>Hi</p>
+                    <div>
+                        <br><br>
+                        <h5>Auto-solve algorithm</h5>
+                        <p>The auto-solve function looks ahead and calculates the state of the board for every possible move the player can make. Each tile has an assigned number of points (larger values are worth more points), which the algorithm uses to determine which move will maximize the number of points.</p>
+                        <br><br>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-4">
+                            <br>
+                            <h5>Leaderboard</h5>
+                            <p>After the end of each game the player is sent ot a win/lose screen where they can enter there name to be recorded in the leaderboards.</p>
                         </div>
                         <div class="col-md-8">
                             <img class="img-fluid rounded mb-3 mb-md-0" src="assets/2048/leaderboard.png" alt="" style="width:100%">
+                        </div>
                     </div>
-                    </div>
-                    
+
+                    <div>
+                        <br><br>
                     <p><b>Features:</b></p>
                     <ul>
                         <li><b>Difficulty</b> — Players can select different difficulties  which include different numbers of blocked tiles and hints allowed</li>
@@ -93,7 +114,7 @@
                         <li><b>Hint</b> — Pop up message that notifies player of the next move which will maximize points</li>
                         <li><b>Auto-play</b> — Clicking "2048 Watson" initiates an algorithm to complete the game</li>
                     </ul>
-
+                    </div>
                     <hr>
                 </div>    
 
@@ -101,18 +122,21 @@
             </div>
 
         </div>
-        <!-- /.row -->
 
-        </div>
-    <!-- /.container -->
 
-    <!-- Footer -->
-    <footer class="py-2 bg-dark">
-        <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; Sanveer Dhanju 2018</p>
-        </div>
-        <!-- /.container -->
-    </footer>
+
+
+        <!-- Footer -->
+        <footer class="py-2 bg-dark">
+            <div class="container">
+                <p class="m-0 text-center text-white">Copyright &copy; Sanveer Dhanju 2018</p>
+            </div>
+            <!-- /.container -->
+        </footer>
+
+        <!-- JavaScript -->
+        <script src="js/jquery.min.js"></script>
+        <script src="js/bootstrap.bundle.min.js"></script>
 
     </body>
 
