--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 <div class="col-md-5">
                     <h1 class="my-1">Sanveer Dhanju</h1>
                     <p><i>Business Administration (HBA)<br>Medical Biophysics (BSc)</i></p>
-                    <p>With corporate experience in Strategy and Supply chain, I pursue personal projects to improve my technical skills. My writing has been published in the Journal of Neurology, Neuroscience, and Psychiatry, and Ivey's Undergraduate strategy publication.</p>
-                    <p>Interests: Artificial Intelligence, Blockchain protocols, and Fencing</p>
+                    <p>With corporate experience in Strategy and Supply Chain, I have strong enthusiasm for artificial intelligence and decentralized consensus protocols. My writing has been published in the Journal of Neurology, Neuroscience, and Psychiatry, and Ivey's Undergraduate strategy publication.</p>
+                    <i>pic to be changed</i>
                 </div>
             </div>
             <!-- Page Heading -->
@@ -74,6 +74,9 @@
             <!-- /.container -->
         </footer>
 
+    <!-- JavaScript -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
 
     </body>
 
