--- a/writing.html
+++ b/writing.html
@@ -116,6 +116,9 @@
         </footer>
 
 
+    <!-- JavaScript -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/bootstrap.bundle.min.js"></script>
     </body>
 
 </html>
