--- a/projects.html
+++ b/projects.html
@@ -64,7 +64,7 @@
                         <h3>Kiva Analysis</h3>
                     </a>
                     <span class="label python">Python</span>
-                    <p>An analysis of Kiva loan data to identify behaviour trends and potential impact. Data visualization with python</p>
+                    <p>An analysis of Kiva loan data to identify behaviour trends and potential impact. Data visualization with python.</p>
                 </div>
             </div>
             <!-- /.row -->
@@ -103,7 +103,7 @@
                     <span class="label python">Python</span>
                     <span class="label mat">Matlab</span>
                    
-                    <p>2018 Medical Biophysics Undergraduate Thesis — Implemented a convolutional neural network (CNN) to automatically segment hippocampal subfields using a protocol demarcating an unprecedented amount of detail.</p>
+                    <p>2018 Medical Biophysics Undergraduate Thesis — Implemented a convolutional neural network (CNN) to automatically segment hippocampal subfields using a protocol that demarcates an unprecedented amount of detail.</p>
                 </div>
             </div>
             <!-- /.row -->
