--- a/projects.html
+++ b/projects.html
@@ -58,6 +58,22 @@
                 </div>
                 <div class="col-md-5">
                     <a href="https://medium.com/@sanveerdhanju/nutrition-economics-at-mcdonalds-763ed58f356f">
+                        <h3>Alien vs Predator Image Classifier</h3>
+                    </a>
+                    <span class="label python">Python</span>
+                    <p>A CNN classifier built using Keras to predict whether an image depicts Alien or Predator</p>
+                </div>
+            </div>           
+            <!-- /.row -->
+
+            <hr>
+            <!-- Project Two -->
+             <div class="row">
+                <div class="col-md-7">
+                    <img class="img-fluid rounded mb-3 mb-md-0" src="assets\Mcd_logo.png" alt="">
+                </div>
+                <div class="col-md-5">
+                    <a href="https://medium.com/@sanveerdhanju/nutrition-economics-at-mcdonalds-763ed58f356f">
                         <h3>McDonalds Nutritional Economics</h3>
                     </a>
                     <span class="label tableau">Tableau</span>
@@ -68,7 +84,7 @@
 
             <hr>
 
-            <!-- Project Two -->
+            <!-- Project Three -->
             <div class="row">
                 <div class="col-md-7">
                     <img class="img-fluid rounded mb-3 mb-md-0" src="assets\CNN.png" alt="">
@@ -90,7 +106,7 @@
             <hr>
 
 
-            <!-- Project Three -->
+            <!-- Project Four -->
             <div class="row">
                 <div class="col-md-7">
                     <img class="img-fluid rounded mb-3 mb-md-0" src="assets\kiva_logo.png" alt="">
@@ -109,7 +125,7 @@
 
             <hr>
 
-            <!-- Project Four -->
+            <!-- Project Five -->
             <div class="row">
                 <div class="col-md-7">
                     <img class="img-fluid rounded mb-3 mb-md-0" src="assets\2048_logo.png" alt="">
