--- a/projects.html
+++ b/projects.html
@@ -54,10 +54,10 @@
             <!-- Project One -->
              <div class="row">
                 <div class="col-md-7">
-                    <img class="img-fluid rounded mb-3 mb-md-0" src="assets\Mcd_logo.png" alt="">
+                    <img class="img-fluid rounded mb-3 mb-md-0" src="assets\AVP_Logo.png" alt="">
                 </div>
                 <div class="col-md-5">
-                    <a href="https://medium.com/@sanveerdhanju/nutrition-economics-at-mcdonalds-763ed58f356f">
+                    <a href="assets\AVP%20Model.html">
                         <h3>Alien vs Predator Image Classifier</h3>
                     </a>
                     <span class="label python">Python</span>
