--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="col-md-5">
                     <h1 class="my-1">Sanveer Dhanju</h1>
                     <p><i>Business Administration (HBA)<br>Medical Biophysics (BSc)</i></p>
-                    <p>With corporate experience in Strategy and Supply Chain, I have strong enthusiasm for artificial intelligence and decentralized consensus protocols. My writing has been published in the Journal of Neurology, Neuroscience, and Psychiatry, and Ivey's Undergraduate strategy publication.</p>
+                    <p>With corporate experience in Strategy and Supply Chain, I have strong enthusiasm for artificial intelligence. My writing has been published in the Journal of Neurology, Neuroscience, and Psychiatry, and Ivey's Undergraduate strategy publication.</p>
                 </div>
             </div>
             <!-- Page Heading -->
