updated bio, added game to projects

--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
                 </div>
                 <div class="col-md-5">
                     <h1 class="my-1">Sanveer Dhanju</h1>
-                    <p><i>Business Administration (HBA)<br>Medical Biophysics (BSc)</i></p>
-                    <p>With corporate experience in Strategy and Supply Chain, I have strong enthusiasm for artificial intelligence. My writing has been published in the Journal of Neurology, Neuroscience, and Psychiatry, and Ivey's Undergraduate strategy publication.</p>
+                    <p><i>Medical Biophysics (BSc)<br></i>Business Administration (HBA)</p>
+                    <p>Hey I'm Sanveer! Over my career I've worked in a variety of roles including: Consulting, Product Management, Supply Chain and Data Science. The common thread through all these experiences is that I love narrting data stories and building strong relationships. <br><br>
+                    In my free time I like working on personal projects and writing; some of which you can find on this site.</p>
+                    <p>Interests: Snowboarding, Playing Guitar, Outdoor Rock Climbing, Board Games</p>
                 </div>
             </div>
             <!-- Page Heading -->
