--- a/projects.html
+++ b/projects.html
@@ -35,9 +35,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="writing.html">WRITING</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="assets\SD-Resume.pdf">RESUME</a>
-                        </li>
                     </ul>
                 </div>
             </div>
@@ -51,6 +48,25 @@
             </h1>
 
             <p1>A collection of personal projects <br><br/></p1>
+
+            <!-- Project  -->
+             <div class="row">
+                <div class="col-md-7">
+                    <img class="img-fluid rounded mb-3 mb-md-0" src="assets\jalebi_cover.png" alt="">
+                </div>
+                <div class="col-md-5">
+                    <a href="https://simmer.io/@SunnyDlight/jalebi-baby-the-video-game">
+                        <h3>Jalebi Baby The Video Game</h3>
+                    </a>
+                    <span class="label c">C#</span>
+                    <span class="label unity">Unity</span>
+                    <p>The official video game for the hit song Jalebi Baby. Launched on Christmass day 2020 with 1K+ plays.</p>
+                </div>
+            </div>           
+            <!-- /.row -->
+            
+            <hr>
+            
             <!-- Project One -->
              <div class="row">
                 <div class="col-md-7">
